--- a/config.cfg
+++ b/config.cfg
@@ -36,10 +36,10 @@ bkgnd_minmax_V = 15.5,18.5
 bkgnd_minmax_R = 15.0,17.5
 
 ### FlatFields, DarkFrame, BiasFrame
-#flatfield_B = "/astmon/cal/AstMon_flat_V_mod.fits"
-#flatfield_V = "/astmon/cal/AstMon_flat_V_mod.fits"
-#flatfield_R = "/astmon/cal/AstMon_flat_V_mod.fits"
-#darkframe = "/astmon/cal/MasterDark_40s.fits"
+flatfield_B = "AstMonUCM_FlatField_Cal_V.fit.gz"
+flatfield_V = "AstMonUCM_FlatField_Cal_V.fit.gz"
+flatfield_R = "AstMonUCM_FlatField_Cal_V.fit.gz"
+darkframe = "AstMonUCM_Dark40s.fit.gz"
 
 ### CCD pixel scale and noise sources
 #pixel_scale = 61265.160324
